# P2

./: .gitignore  README.md  dale  dale2  meson.build  output.vad  output2.vad  prueba.lab  prueba.vad  prueba2.vad  prueba3.vad  pruebaout.txt  resultados_ordenados.txt  test  token.txt  viejos+
db.v4/2014/: pav_4152.vad  pav_4161.vad  pav_4171.vad  pav_4172.vad  pav_4305.vad  pav_4311.vad  pav_4341.vad
db.v4/2015/: pav_2110.vad  pav_2151.vad  pav_2152.vad  pav_2171.vad  pav_2172.vad
db.v4/201617q1/: pav_1341.vad  pav_4111.vad  pav_4112.vad  pav_41191.vad  pav_41192.vad  pav_412_1.vad  pav_4132.vad  pav_4161.vad  pav_418.vad  pav_4311.vad  pav_4312.vad  pav_4313.vad  pav_4321.vad  pav_4331.vad  pav_4351.vad
db.v4/201617q2/: pav_1121.vad  pav_1131.vad  pav_1141.vad  pav_1171.vad  pav_2151.vad
db.v4/2017-18q1/: pav_1131.vad  pav_4131.vad  pav_4141.vad  pav_4171.vad  pav_4341.vad
db.v4/2017-18q2/: pav_137.vad  pav_2121.vad  pav_2142.vad  pav_2171.vad  pav_2191.vad  pav_231.vad  pav_232.vad  pav_233.vad  pav_2342.vad  pav_236.vad  pav_237.vad  pav_238.vad  pav_239.vad
db.v4/2018-19q1/: pav_4111.vad  pav_4112.vad  pav_4121.vad  pav_4122.vad  pav_4131.vad  pav_4132.vad  pav_4141.vad  pav_4151.vad  pav_4161.vad  pav_4171.vad  pav_4172.vad  pav_4181.vad  pav_4182.vad  pav_4341.vad  pav_4342.vad  pav_4351.vad  pav_4352.vad  pav_4361.vad  pav_4362.vad  pav_4382.vad  pav_4385.vad
db.v4/2018-19q2/: pav_21101.vad  pav_2111.vad  pav_2121.vad  pav_2131.vad  pav_2141.vad  (+15 more)
scripts/: run_vad.sh
src/: main_vad.c  pav_analysis.c  vad.c  vad.docopt  vad.h  vad_docopt.h
